--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,33 +8,30 @@
   <meta name="keywords" content="Frontend Developer, Portfolio, HTML, Projects, Web Developer">
   <meta name="author" content="AA21">
   <title>Frontend Developer | Home</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <font face="Arial, Helvetica, sans-serif">
   <header>
-    <table width="100%">
-      <tr>
-        <td><strong>AA21</strong></td>
-        <td align="right">
-          <nav>
-            <a href="index.html">Home</a> |
-            <a href="projects.html">Projects</a> |
-            <a href="articles.html">Articles</a> |
-            <a href="contact.html">Contact</a>
-          </nav>
-        </td>
-      </tr>
-    </table>
+    <div class="header-container">
+      <strong>AA21</strong>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="projects.html">Projects</a>
+        <a href="articles.html">Articles</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
   </header>
 
   <main>
-    <center>
-      <h1>Frontend Developer</h1>
-      <p><font color="gray">html only with proper layout, no styling</font></p>
-    </center>
+    <h1 class="center">Frontend Developer</h1>
+    <p class="center text-gray">HTML only with proper layout, now fully styled and responsive</p>
     <hr>
 
-    <table width="100%" border="1" cellspacing="0" cellpadding="8">
+    <table>
       <tr valign="top">
         <td width="30%">
           <h3>Projects</h3>
@@ -76,7 +74,7 @@
 
     <section>
       <h3>Reviews from my Teachers</h3>
-      <table width="100%" cellpadding="10">
+      <table>
         <tr align="center">
           <td>
             <p>John Doe was a brilliant student; always stood out with his assignments.</p>
@@ -90,15 +88,14 @@
             <p>John Doe was a brilliant student; always stood out with his assignments.</p>
             <p><strong>Jane Doe</strong><br>Assistant Professor</p>
           </td>
-          
         </tr>
       </table>
     </section>
   </main>
 
   <footer>
-    <center><p>© all rights reserved 2025</p></center>
+    <p>© all rights reserved 2025</p>
   </footer>
-  </font>
 </body>
+
 </html>
