Refactor projects.html with CSS and improved layout
Updated project descriptions and added CSS styling.

--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,69 +8,66 @@
   <meta name="keywords" content="HTML Projects, Portfolio, Frontend Developer">
   <meta name="author" content="AA21">
   <title>Projects | Frontend Developer</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <font face="Arial, Helvetica, sans-serif">
   <header>
-    <table width="100%">
-      <tr>
-        <td><strong>AA21</strong></td>
-        <td align="right">
-          <nav>
-            <a href="index.html">Home</a> |
-            <a href="projects.html">Projects</a> |
-            <a href="articles.html">Articles</a> |
-            <a href="contact.html">Contact</a>
-          </nav>
-        </td>
-      </tr>
-    </table>
+    <div class="header-container">
+      <strong>AA21</strong>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="projects.html">Projects</a>
+        <a href="articles.html">Articles</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
   </header>
 
   <main>
-    <center>
-      <h1>My Projects</h1>
-      <p><font color="gray">A showcase of my HTML-only creations</font></p>
-    </center>
+    <h1 class="center">My Projects</h1>
+    <p class="center text-gray">A showcase of my HTML-only creations</p>
     <hr>
 
-    <table width="100%" border="1" cellspacing="0" cellpadding="10">
-      <tr bgcolor="#f5f5f5">
+    <table>
+      <tr>
         <th>Project Name</th>
         <th>Description</th>
         <th>Link</th>
       </tr>
       <tr>
         <td><strong>HTML Only Portfolio</strong></td>
-        <td>A personal portfolio built using only HTML structure, no CSS or JS.</td>
+        <td>A personal portfolio built using only HTML structure, now styled with CSS and responsive design.</td>
         <td><a href="#">View</a></td>
       </tr>
       <tr>
         <td><strong>Calculator</strong></td>
-        <td>A simple web-based calculator designed using form inputs and logic structure.</td>
+        <td>A simple web-based calculator layout created using form inputs and styled using the box model.</td>
         <td><a href="#">View</a></td>
       </tr>
       <tr>
         <td><strong>Quiz App</strong></td>
-        <td>Interactive quiz page made with radio buttons and pure HTML layout.</td>
+        <td>An interactive quiz structure built with radio buttons and clean layout, ready for JS enhancement.</td>
         <td><a href="#">View</a></td>
       </tr>
       <tr>
         <td><strong>Countdown Timer</strong></td>
-        <td>A coming soon page with countdown structure, ready for JS integration later.</td>
+        <td>A coming soon page with countdown layout, styled to adapt across all screen sizes.</td>
         <td><a href="#">View</a></td>
       </tr>
       <tr>
         <td><strong>Product Upcoming Page</strong></td>
-        <td>HTML-only product launch announcement with clean structure.</td>
+        <td>HTML-only product launch announcement, using flexbox and color scheme consistency.</td>
         <td><a href="#">View</a></td>
       </tr>
     </table>
   </main>
 
   <footer>
-    <center><p>© all rights reserved 2025</p></center>
+    <p>© all rights reserved 2025</p>
   </footer>
-  </font>
 </body>
+
 </html>
