Refactor contact.html for improved layout and styles
Updated the contact page layout and styling, added Google Fonts, and improved form structure.

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,68 +8,54 @@
   <meta name="keywords" content="Contact, Form, Email, Frontend Developer">
   <meta name="author" content="AA21">
   <title>Contact | Frontend Developer</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <font face="Arial, Helvetica, sans-serif">
   <header>
-    <table width="100%">
-      <tr>
-        <td><strong>AA21</strong></td>
-        <td align="right">
-          <nav>
-            <a href="index.html">Home</a> |
-            <a href="projects.html">Projects</a> |
-            <a href="articles.html">Articles</a> |
-            <a href="contact.html">Contact</a>
-          </nav>
-        </td>
-      </tr>
-    </table>
+    <div class="header-container">
+      <strong>AA21</strong>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="projects.html">Projects</a>
+        <a href="articles.html">Articles</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
   </header>
 
   <main>
-    <center>
-      <h1>Contact Me</h1>
-      <p><font color="gray">Feel free to send a message or ask a question</font></p>
-    </center>
+    <h1 class="center">Contact Me</h1>
+    <p class="center text-gray">Feel free to send a message or ask a question</p>
     <hr>
 
     <form>
-      <table align="center" cellpadding="8" cellspacing="0" border="0">
-        <tr>
-          <td><label for="name"><strong>Name:</strong></label></td>
-          <td><input type="text" id="name" name="name" size="30" placeholder="Your name"></td>
-        </tr>
-        <tr>
-          <td><label for="email"><strong>Email:</strong></label></td>
-          <td><input type="email" id="email" name="email" size="30" placeholder="you@example.com"></td>
-        </tr>
-        <tr>
-          <td><label for="subject"><strong>Subject:</strong></label></td>
-          <td><input type="text" id="subject" name="subject" size="30" placeholder="Subject here"></td>
-        </tr>
-        <tr>
-          <td><label for="message"><strong>Message:</strong></label></td>
-          <td><textarea id="message" name="message" rows="6" cols="40" placeholder="Write your message here"></textarea></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td><input type="submit" value="Send Message"></td>
-        </tr>
-      </table>
+      <label for="name"><strong>Name:</strong></label><br>
+      <input type="text" id="name" name="name" placeholder="Your name"><br><br>
+
+      <label for="email"><strong>Email:</strong></label><br>
+      <input type="email" id="email" name="email" placeholder="you@example.com"><br><br>
+
+      <label for="subject"><strong>Subject:</strong></label><br>
+      <input type="text" id="subject" name="subject" placeholder="Subject here"><br><br>
+
+      <label for="message"><strong>Message:</strong></label><br>
+      <textarea id="message" name="message" rows="6" placeholder="Write your message here"></textarea><br><br>
+
+      <input type="submit" value="Send Message">
     </form>
 
-    <center>
-      <h3>Other Ways to Reach Me</h3>
-      <p>Email: <a href="mailto:you@example.com">you@example.com</a></p>
-      <p>GitHub: <a href="#">github.com/yourname</a></p>
-      <p>LinkedIn: <a href="#">linkedin.com/in/yourname</a></p>
-    </center>
+    <h3 class="center">Other Ways to Reach Me</h3>
+    <p class="center">Email: <a href="mailto:you@example.com">you@example.com</a></p>
+    <p class="center">GitHub: <a href="#">github.com/yourname</a></p>
+    <p class="center">LinkedIn: <a href="#">linkedin.com/in/yourname</a></p>
   </main>
 
   <footer>
-    <center><p>© all rights reserved 2025</p></center>
+    <p>© all rights reserved 2025</p>
   </footer>
-  </font>
 </body>
+
 </html>
